# pypcode

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CMakeLists.txt  LICENSE.txt  MANIFEST.in  README.md  build_cffi.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: build.yml
docs/: api.rst  conf.py  guide.rst  index.rst  languages.rst  quickstart.rst
pypcode/: .gitignore  __init__.py  __main__.py  __version__.py  _csleigh.pyi  cspec.py  ldefs.py  printing.py  pspec.py  pypcode_native.cpp  pypcode_native.pyi
pypcode/_csleigh/: lib.pyi
pypcode/native/: .gitignore  CMakeLists.txt  Makefile  csleigh.cc  csleigh.h  sleigh_download.sh
pypcode/native/sleigh/: Makefile  error.hh  sleigh.cc  sleigh.hh  slghscan.cc  types.h
pypcode/processors/: .gitignore
pypcode/processors/PowerPC/data/languages/: ppc.ldefs  ppc_32_e200.pspec  ppc_32_e200.slaspec  ppc_common.sinc
pypcode/processors/RISCV/scripts/: binutil.py
pypcode/pypcode-native/: .gitignore  CMakeLists.txt  Makefile  build_local.sh  cffi_build.py  csleigh.cc  csleigh.h  pypcode-native.cc  pypcode-native.h  sleigh_download.sh
pypcode/pypcode-native/sleigh/: Makefile  slghscan.cc
pypcode/pypcode-native/sleigh-2.1.0/: Makefile  README
pypcode/pypcode-native/sleigh-2.1.0/doc/html/: annotated.html  classAddrSpaceManager-members.html  classAddrSpaceManager.html  classAddress-members.html  classAddressResolver-members.html  classAssemblyEmit-members.html  classBreakTableCallBack.html  classConstantSpace-members.html  classConstantSpace.html  classContentHandler.html  classContextBitRange-members.html  classContextBitRange.html  classContextCache-members.html  classContextCache.html  classContextDatabase-members.html  classContextDatabase.html  classDisassemblyCache-members.html  classDisassemblyCache.html  classDocument-members.html  classDocument.html  classDocumentStorage.html  classElement-members.html  classElement.html  classEmulate.html  classEmulateMemory.html  classEmulatePcodeCache.html  classFloatFormat-members.html  classFloatFormat.html  classJoinRecord-members.html  classJoinRecord.html  classLoadImage.html  classMemoryBank-members.html  classMemoryHashOverlay-members.html  classMemoryImage-members.html  classMemoryImage.html  classMemoryPageOverlay.html  classMemoryState-members.html  classMemoryState.html  classOpBehavior-members.html  classOpBehaviorBoolAnd-members.html  (+129 more)
pypcode/pypcode-native/sleigh-2.1.0/src/: Makefile  pcodeparse.cc  slghparse.cc  slghparse.tab.hh
pypcode/pypcode-native/sleigh/doc/html/: address_8hh.html  classAddrSpace-members.html  classAddrSpace.html  classAddress.html  classAddressResolver.html  classAssemblyEmit.html  classAttributes-members.html  classAttributes.html  classBreakCallBack-members.html  classBreakCallBack.html  classBreakTable-members.html  classBreakTable.html  classBreakTableCallBack-members.html  classContentHandler-members.html  classContextInternal-members.html  classContextInternal.html  classDocumentStorage-members.html  classEmulate-members.html  classEmulateMemory-members.html  classEmulatePcodeCache-members.html  classJoinSpace-members.html  classJoinSpace.html  classLoadImage-members.html  classMemoryBank.html  classMemoryHashOverlay.html  classMemoryPageOverlay-members.html  classOpBehavior.html  classOpBehaviorBoolAnd.html  classOpBehaviorBoolNegate-members.html  classOpBehaviorBoolNegate.html  classOpBehaviorBoolXor-members.html  classOpBehaviorEqual-members.html  classOpBehaviorEqual.html  classOpBehaviorFloatAbs-members.html  classOpBehaviorFloatAdd-members.html  classOpBehaviorFloatAdd.html  classOpBehaviorFloatFloat2Float-members.html  classOpBehaviorFloatInt2Float.html  classOpBehaviorFloatLess.html  classOpBehaviorFloatLessEqual.html  (+124 more)
pypcode/pypcode-native/sleigh/src/: sleigh.hh  xml.cc
pypcode/sleigh/: Makefile  error.hh  loadimage.hh  opcodes.hh  pcodeparse.cc  sleigh.cc  sleigh.hh  space.cc  types.h  xml.cc  xml.hh  xml.y
samples/: .gitignore  Makefile  lift.py  simple_code.c
scripts/: benchmark.py  sleigh_download.sh
tests/: test.py  test_cli.py  test_cspec.py  test_ldefs.py  test_pspec.py  test_pypcode.py
