[metadata]
name = pypcode
version = attr: pypcode.__version__
description = Machine code disassembly and IR translation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/pypcode
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    pypcode
install_requires =
    cffi
    types-cffi
python_requires = >=3.8
setup_requires =
    cffi

[options.extras_require]
docs =
    furo
    ipython
    myst-parser
    sphinx
    sphinx-autodoc-typehints
