[metadata]
name = pypcode
version = attr: pypcode.__version__.__version__
description = Machine code disassembly and IR translation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/pypcode
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    pypcode
python_requires = >=3.10

[options.extras_require]
docs =
    furo
    ipython
    myst-parser
    sphinx
    sphinx-autodoc-typehints
